--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,14 @@
 name: DoodleJumpLobby
 version: '${project.version}'
 main: de.ac.doodlejumplobby.DoodleJumpLobby
-api-version: '1.16'
+api-version: '1.8'
+commands:
+  doodlejump:
+    description: starts doodle jump game.
+  deletelevel:
+    description: deletes the entire doodle jump "level".
+    permission: doodlejump.delete.level
+  clearsteps:
+    description: deletes every step.
+    permission: doodlejump.delete.steps
+
